--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ env:
   - TOX_ENV=py32
   - TOX_ENV=py33
 install:
-  - pip install tox
+  - pip install tox PyCrypto ecdsa
 script:
   - tox -e $TOX_ENV
