--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.eggs/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -55,3 +56,5 @@ docs/_build/
 
 # PyBuilder
 target/
+
+jwt/_version.py
