--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   - TOXENV=flake8
   - TOXENV=py26-crypto
   - TOXENV=py27-crypto
+  - TOXENV=py32-crypto
   - TOXENV=py33-crypto
   - TOXENV=py34-crypto
   - TOXENV=py35-crypto
