Fix tox errors:
- Add py35 env to tox.ini
- Add flake8 excludes to tox.ini
- Change str.format() to str % str to be compatible with older Python envs.
- Removed pytest version constraint from setup.py
- Reordered envs in .travis.yml
- Added python 3.6 envs to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "3.5"
+  - "3.6"
 sudo: false
 env:
   - TOXENV=flake8
@@ -9,11 +9,15 @@ env:
   - TOXENV=py33-crypto
   - TOXENV=py34-crypto
   - TOXENV=py35-crypto
+  - TOXENV=py36-crypto
+  - TOXENV=py27-nocrypto
   - TOXENV=py34-nocrypto
   - TOXENV=py35-nocrypto
-  - TOXENV=py27-nocrypto
-  - TOXENV=py35-contrib_crypto
+  - TOXENV=py36-nocrypto
   - TOXENV=py27-contrib_crypto
+  - TOXENV=py35-contrib_crypto
+  - TOXENV=py36-contrib_crypto
+  
 install:
   - pip install -U pip
   - pip install -U tox coveralls
