--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist = py{26,27,33,34,35}-crypto, py{27,35}-contrib_crypto, py{27,35}-nocrypto, flake8
+envlist = py{26,27,33,34,35,36}-crypto, py{27,35,36}-contrib_crypto, py{27,35,36}-nocrypto, flake8
+
+[flake8]
+exclude = .git,__pycache__,docs/conf.py,old,build,dist,.tox,.eggs
 
 [testenv]
 commands =
