--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,11 @@ envlist = py{27,34,35,36}-crypto, py{27,35,36}-contrib_crypto, py{27,35,36}-nocr
 
 [testenv]
 commands =
-    python setup.py pytest
+    pytest {posargs}
 deps =
+    pytest >3,<4
+    pytest-cov
+    pytest-runner
     crypto: cryptography
     contrib_crypto: pycrypto
     contrib_crypto: ecdsa
