--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ exclude =
 [wheel]
 universal = 1
 
-; [tool:pytest]
-; addopts = --cov-report term-missing --cov-config=.coveragerc --cov .
+[tool:pytest]
+addopts = --cov-report term-missing --cov-config=.coveragerc --cov .
 
 [aliases]
 test = pytest
