--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ matrix:
     - python: 3.4
       env: TOXENV=py34-crypto,py34-nocrypto
     - python: 3.5
-      env: TOXENV=mypy,py35-crypto,py35-nocrypto,py35-contrib_crypto
+      env: TOXENV=py35-crypto,py35-nocrypto,py35-contrib_crypto
     - python: 3.6
-      env: TOXENV=mypy,py36-crypto,py36-nocrypto,py36-contrib_crypto
+      env: TOXENV=py36-crypto,py36-nocrypto,py36-contrib_crypto
     - python: 3.7
-      env: TOXENV=lint,typing,mypy,py37-crypto,py37-nocrypto,py37-contrib_crypto
+      env: TOXENV=lint,typing,py37-crypto,py37-nocrypto,py37-contrib_crypto
       dist: xenial
 install:
   - pip install -U pip
