--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 envlist =
     lint
     typing
-    py{35,36,37}-crypto
-    py{35,36,37}-contrib_crypto
-    py{35,36,37}-nocrypto
+    py{35,36,37,py3}-crypto
+    py{35,36,37,py3}-contrib_crypto
+    py{35,36,37,py3}-nocrypto
 
 
 [testenv]
