--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     typing
     py{35,36,37}-crypto
     py{35,36,37}-contrib_crypto
+    py{35,36,37}-contrib_cryptodome
     py{35,36,37}-nocrypto
 
 
@@ -14,6 +15,8 @@ deps =
     crypto: cryptography
     contrib_crypto: pycrypto
     contrib_crypto: ecdsa
+    contrib_cryptodome: pycryptodome
+    contrib_cryptodome: ecdsa
 
 
 [testenv:typing]
