Add support for Python 3.8.
Note that pycrypto does not work with python 3.8 since they removed
`time.clock` altogether.

https://github.com/dlitz/pycrypto/issues/283

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,9 @@ environment:
     - PYTHON: "C:\\Python37-x64"
       TOX_ENV: "py37-crypto"
 
+    - PYTHON: "C:\\Python38-x64"
+      TOX_ENV: "py38-crypto"
+
 init:
   - SET PATH=%PYTHON%;%PATH%
   - python -c "import sys;sys.stdout.write(sys.version)"
