--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ matrix:
     - python: 3.6
       env: TOXENV=py36-crypto,py36-nocrypto,py36-contrib_crypto,py36-contrib_cryptodome
     - python: 3.7
-      env: TOXENV=lint,typing,py37-crypto,py37-nocrypto,py37-contrib_crypto,py37-contrib_cryptodome
+      env: TOXENV=py37-crypto,py37-nocrypto,py37-contrib_crypto,py37-contrib_cryptodome
+    - python: 3.8
+      env: TOXENV=lint,typing,py38-crypto,py38-nocrypto,py38-contrib_cryptodome
 install:
   - pip install -U pip
   - pip install -U tox coveralls
