Add docs environment to tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist =
+    docs
     lint
     typing
     py{35,36,37,38}-crypto
@@ -28,3 +29,8 @@ commands = mypy --ignore-missing-imports jwt
 extras = dev
 passenv = HOMEPATH  # needed on Windows
 commands = pre-commit run --all-files
+
+[testenv:docs]
+deps =
+    -r docs/requirements-docs.txt
+commands = ./setup.py build_sphinx --all-files --fresh-env
