--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
     - python: 3.7
       env: TOXENV=py37-crypto,py37-nocrypto,py37-contrib_crypto,py37-contrib_cryptodome
     - python: 3.8
-      env: TOXENV=lint,typing,py38-crypto,py38-nocrypto,py38-contrib_cryptodome
+      env: TOXENV=docs,lint,typing,py38-crypto,py38-nocrypto,py38-contrib_cryptodome
 install:
   - pip install -U pip
   - pip install -U tox coveralls
