Fix sphinx warnings and make tox env picky.

--- a/tox.ini
+++ b/tox.ini
@@ -33,4 +33,4 @@ commands = pre-commit run --all-files
 [testenv:docs]
 deps =
     -r docs/requirements-docs.txt
-commands = ./setup.py build_sphinx --all-files --fresh-env
+commands = ./setup.py build_sphinx --all-files --fresh-env --warning-is-error --nitpicky
