Implement support with PyCryptodome

--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,16 @@ envlist =
     py{35,36,37,38}-crypto
     py{35,36,37}-contrib_crypto
     py{35,36,37,38}-nocrypto
+    py{35,36,37,38}-contrib_pycryptodome
 
 
 [testenv]
-extras = tests
+extras =
+    tests
+    crypto: cryptography
+    contrib_pycryptodome: pycryptodome
 commands = pytest
 deps =
-    crypto: cryptography
     contrib_crypto: pycrypto
     contrib_crypto: ecdsa
 
