Remove support for legacy dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ matrix:
     - python: 3.8
       env: TOXENV=lint,typing
     - python: 3.5
-      env: TOXENV=py35-crypto,py35-nocrypto,py35-contrib_crypto
+      env: TOXENV=py35-crypto,py35-nocrypto
     - python: 3.6
-      env: TOXENV=py36-crypto,py36-nocrypto,py36-contrib_crypto
+      env: TOXENV=py36-crypto,py36-nocrypto
     - python: 3.7
-      env: TOXENV=py37-crypto,py37-nocrypto,py37-contrib_crypto
+      env: TOXENV=py37-crypto,py37-nocrypto
     - python: 3.8
       env: TOXENV=py38-crypto,py38-nocrypto
 install:
