--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,31 @@
+[pytest]
+strict = true
+addopts = -ra
+testpaths = tests
+filterwarnings =
+    once::Warning
+    ignore:::pympler[.*]
+
+
+
+[gh-actions]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38, lint, manifest, typing
+
+
 [tox]
 envlist =
     lint
     typing
+    manifest
+    pypi-description
     py{35,36,37,38}-crypto
     py{35,36,37,38}-nocrypto
+isolated_build = True
 
 
 [testenv]
@@ -14,11 +36,31 @@ commands = pytest
 
 
 [testenv:typing]
+basepython = python3.8
 extras = dev
-commands = mypy --ignore-missing-imports jwt
+commands = mypy --ignore-missing-imports src/jwt
 
 
 [testenv:lint]
+basepython = python3.8
 extras = dev
 passenv = HOMEPATH  # needed on Windows
 commands = pre-commit run --all-files
+
+
+[testenv:manifest]
+basepython = python3.8
+deps = check-manifest
+skip_install = true
+commands = check-manifest
+
+
+[testenv:pypi-description]
+basepython = python3.8
+skip_install = true
+deps =
+    twine
+    pip >= 18.0.0
+commands =
+    pip wheel -w {envtmpdir}/build --no-deps .
+    twine check {envtmpdir}/build/*
