--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,6 @@ filterwarnings =
     ignore:::pympler[.*]
 
 
-
 [gh-actions]
 python =
     2.7: py27
@@ -21,10 +20,11 @@ python =
 envlist =
     lint
     typing
-    manifest
-    pypi-description
     py{35,36,37,38}-crypto
     py{35,36,37,38}-nocrypto
+    manifest
+    pypi-description
+    coverage-report
 isolated_build = True
 
 
@@ -32,7 +32,7 @@ isolated_build = True
 extras =
     tests
     crypto: cryptography
-commands = pytest
+commands = coverage run -m pytest {posargs}
 
 
 [testenv:typing]
@@ -64,3 +64,11 @@ deps =
 commands =
     pip wheel -w {envtmpdir}/build --no-deps .
     twine check {envtmpdir}/build/*
+
+[testenv:coverage-report]
+basepython = python3.8
+skip_install = true
+deps = coverage[toml]>=5.0.2
+commands =
+    coverage combine
+    coverage report
