Improve docs setup

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
     2.7: py27
     3.5: py35
     3.6: py36
-    3.7: py37
+    3.7: py37, docs
     3.8: py38, lint, manifest, typing
 
 
@@ -23,6 +23,7 @@ envlist =
     py{35,36,37,38}-crypto
     py{35,36,37,38}-nocrypto
     manifest
+    docs
     pypi-description
     coverage-report
 isolated_build = True
@@ -33,6 +34,15 @@ extras =
     tests
     crypto: cryptography
 commands = coverage run -m pytest {posargs}
+
+
+[testenv:docs]
+basepython = python3.7
+extras = docs
+commands =
+    sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    python -m doctest README.rst
 
 
 [testenv:typing]
