--- a/tox.ini
+++ b/tox.ini
@@ -16,12 +16,18 @@ python =
     3.8: py38, lint, manifest, typing
 
 
+[gh-actions:env]
+PLATFORM =
+    ubuntu-latest: linux
+    windows-latest: windows
+
+
 [tox]
 envlist =
     lint
     typing
-    py{35,36,37,38}-crypto
-    py{35,36,37,38}-nocrypto
+    py{35,36,37,38}-crypto-{linux,windows}
+    py{35,36,37,38}-nocrypto-{linux,windows}
     manifest
     docs
     pypi-description
