Setup GH Actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,11 +37,15 @@ console_scripts =
     pyjwt = jwt.__main__:main
 
 [options.extras_require]
+docs =
+    sphinx
+    sphinx-rtd-theme
+    zope.interface
 crypto =
     cryptography >= 1.4
 tests =
-    pytest>=4.0.1,<5.0.0
-    pytest-cov>=2.6.0,<3.0.0
+    pytest>=4.3.0,<5.0.0
+    coverage[toml]>=5.0.2
 
 [options.packages.find]
 exclude =
