--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ commands =
 [testenv:typing]
 basepython = python3.8
 extras = dev
-commands = mypy --ignore-missing-imports src/jwt
+commands = mypy --ignore-missing-imports jwt
 
 
 [testenv:lint]
