--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,15 @@ crypto =
 tests =
     pytest>=4.3.0,<5.0.0
     coverage[toml]>=5.0.2
+dev =
+    sphinx
+    sphinx-rtd-theme
+    zope.interface
+    cryptography>=1.4
+    pytest>=4.3.0,<5.0.0
+    coverage[toml]>=5.0.2
+    mypy
+    pre-commit
 
 [options.packages.find]
 exclude =
