--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,6 @@ filterwarnings =
 [gh-actions]
 python =
     2.7: py27
-    3.5: py35
     3.6: py36
     3.7: py37, docs
     3.8: py38, lint, manifest, typing
@@ -26,8 +25,8 @@ PLATFORM =
 envlist =
     lint
     typing
-    py{35,36,37,38}-crypto-{linux,windows}
-    py{35,36,37,38}-nocrypto-{linux,windows}
+    py{36,37,38}-crypto-{linux,windows}
+    py{36,37,38}-nocrypto-{linux,windows}
     manifest
     docs
     pypi-description
@@ -36,6 +35,10 @@ isolated_build = True
 
 
 [testenv]
+# Prevent random setuptools/pip breakages like
+# https://github.com/pypa/setuptools/issues/1042 from breaking our builds.
+setenv =
+    VIRTUALENV_NO_DOWNLOAD=1
 extras =
     tests
     crypto: cryptography
@@ -85,7 +88,7 @@ commands =
 [testenv:coverage-report]
 basepython = python3.8
 skip_install = true
-deps = coverage[toml]>=5.0.2
+deps = coverage[toml]==5.0.4
 commands =
     coverage combine
     coverage report
