--- a/setup.cfg
+++ b/setup.cfg
@@ -42,17 +42,17 @@ docs =
     sphinx-rtd-theme
     zope.interface
 crypto =
-    cryptography >= 1.4
+    cryptography>=1.4
 tests =
     pytest>=4.3.0,<5.0.0
-    coverage[toml]>=5.0.2
+    coverage[toml]==5.0.4
 dev =
     sphinx
     sphinx-rtd-theme
     zope.interface
     cryptography>=1.4
     pytest>=4.3.0,<5.0.0
-    coverage[toml]>=5.0.2
+    coverage[toml]==5.0.4
     mypy
     pre-commit
 
