Added timezone support in decode

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ tests =
     pytest>=6.0.0,<7.0.0
     coverage[toml]==5.0.4
     requests-mock>=1.7.0,<2.0.0
+    pytz >= 2020.1
 dev =
     sphinx
     sphinx-rtd-theme
