--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
     3.7: py37, docs
     3.8: py38, lint, manifest, typing
     3.9: py39
-
+    pypy3: pypy3
 
 [gh-actions:env]
 PLATFORM =
@@ -24,8 +24,8 @@ PLATFORM =
 envlist =
     lint
     typing
-    py{36,37,38,39}-crypto-{linux,windows}
-    py{36,37,38,39}-nocrypto-{linux,windows}
+    py{36,37,38,39,py3}-crypto-{linux,windows}
+    py{36,37,38,39,py3}-nocrypto-{linux,windows}
     manifest
     docs
     pypi-description
@@ -40,7 +40,7 @@ setenv =
     VIRTUALENV_NO_DOWNLOAD=1
 extras =
     tests
-    py{36,37,38,39}-crypto-{linux,windows}: crypto
+    py{36,37,38,39,py3}-crypto-{linux,windows}: crypto
 commands = coverage run -m pytest {posargs}
 
 
