refactor: support typed dictionary for improved clarity in type hints

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ include_package_data = true
 python_requires = >=3.6
 packages = find:
 
+install_requires =
+    typing-extensions>=4;python_version<"3.8"
+
 [options.package_data]
 * = py.typed
 
