Ignore `if TYPE_CHECKING:` lines in coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ source = ["jwt", ".tox/*/site-packages"]
 
 [tool.coverage.report]
 show_missing = true
+exclude_lines = ["if TYPE_CHECKING:"]
 
 [tool.isort]
 profile = "black"
