Add complete types to take all allowed keys into account (#873)
* Use new style typing

* Fix type annotations to allow all keys

* Use string type annotations where required

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Remove outdated comment

* Ignore `if TYPE_CHECKING:` lines in coverage

* Remove duplicate test

* Fix mypy errors

* Update algorithms.py

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Fully switch to modern annotations

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Update `pre-commit` mypy config

* Use Python 3.11 for mypy

* Update mypy Python version in `pyproject.toml`

* Few tests mypy fixes

* fix mypy errors on tests

* Fix key imports

* Remove unused import

* Fix randomly failing test

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Asif Saif Uddin <auvipy@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ source = ["jwt", ".tox/*/site-packages"]
 
 [tool.coverage.report]
 show_missing = true
+exclude_lines = ["if TYPE_CHECKING:"]
 
 [tool.isort]
 profile = "black"
@@ -19,7 +20,7 @@ atomic = true
 combine_as_imports = true
 
 [tool.mypy]
-python_version = 3.7
+python_version = 3.11
 ignore_missing_imports = true
 warn_unused_ignores = true
 no_implicit_optional = true
