set cafile from certifi

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ include_package_data = true
 python_requires = >=3.7
 packages = find:
 install_requires =
+    certifi
     typing_extensions; python_version<="3.7"
 
 [options.package_data]
