--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ packages = find:
 
 [options.extras_require]
 docs =
-    sphinx>=4.5.0,<5.0.0
+    sphinx
     sphinx-rtd-theme
     zope.interface
 crypto =
@@ -50,7 +50,7 @@ tests =
     pytest>=6.0.0,<7.0.0
     coverage[toml]==5.0.4
 dev =
-    sphinx>=4.5.0,<5.0.0
+    sphinx
     sphinx-rtd-theme
     zope.interface
     cryptography>=3.4.0
