chore: adding async

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,9 @@ docs =
     zope.interface
 crypto =
     cryptography>=3.4.0
+async =
+    httpx==0.27.0
+    async-lru==2.0.4
 tests =
     pytest>=6.0.0,<7.0.0
     coverage[toml]==5.0.4
