--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ async =
     async-lru==2.0.4
 tests =
     pytest>=6.0.0,<7.0.0
+    pytest-asyncio>=0.23.6
     coverage[toml]==5.0.4
 dev =
     sphinx
