chore: downgrading to acceptable pytest-asyncio

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ async =
     async-lru==2.0.4
 tests =
     pytest>=6.0.0,<7.0.0
-    pytest-asyncio>=0.23.6
+    pytest-asyncio==0.20.3
     coverage[toml]==5.0.4
 dev =
     sphinx
