--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,10 @@ jobs:
       USING_COVERAGE: '3.8'
 
     strategy:
+      fail-fast: false
       matrix:
         platform: ["ubuntu-latest", "windows-latest"]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.8", "pypy3.9"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.8", "pypy3.9"]
 
     steps:
       - uses: "actions/checkout@v4"
