Add an RTD config file to resolve RTD build failures

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ commands = {envpython} -b -m coverage run -m pytest {posargs}
 
 
 [testenv:docs]
+# The tox config must match the ReadTheDocs config.
 basepython = python3.11
 extras = docs
 commands =
