--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ extras = docs
 commands =
     sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
-    python -m doctest README.rst
+    python -m doctest README.rst docs/usage.rst
 
 
 [testenv:lint]
