--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,9 @@ commands = {envpython} -b -m coverage run -m pytest {posargs}
 [testenv:docs]
 # The tox config must match the ReadTheDocs config.
 basepython = python3.11
-extras = docs
+extras =
+    docs
+    crypto: crypto
 commands =
     sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
