include crypto extra in docs tox-env

--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ commands = {envpython} -b -m coverage run -m pytest {posargs}
 basepython = python3.11
 extras =
     docs
-    crypto: crypto
+    crypto
 commands =
     sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
