--- a/.github/workflows/enforce-changelog-entry.yml
+++ b/.github/workflows/enforce-changelog-entry.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: dangoslen/changelog-enforcer@204e7d3ef26579f4cd0fd759c57032656fdf23c7 # v3.6.1
       with:
         skipLabels: 'Skip-Changelog,dependencies,tests'
-        versionPattern: '^`Unreleased <\S+>`__$'
+        versionPattern: ^`(v\\d?\\.\\d?\\.\\d|Unreleased) <\\S+>`__
