--- a/.github/workflows/enforce-changelog-entry.yml
+++ b/.github/workflows/enforce-changelog-entry.yml
@@ -15,3 +15,4 @@ jobs:
       with:
         skipLabels: 'Skip-Changelog,dependencies,tests'
         versionPattern: ^`(v\\d?\\.\\d?\\.\\d|Unreleased) <\\S+>`__
+        changeLogPath: CHANGELOG.rst
