--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 24.8.0
+    rev: 24.10.0
     hooks:
       - id: black
         args: ["--target-version=py38"]
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: 1.17.0
+    rev: 1.19.0
     hooks:
       - id: blacken-docs
         args: ["--target-version=py38"]
@@ -17,14 +17,14 @@ repos:
       - id: isort
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: debug-statements
 
   - repo: https://github.com/mgedmin/check-manifest
-    rev: "0.49"
+    rev: "0.50"
     hooks:
       - id: check-manifest
         args: [--no-build-isolation]
@@ -40,13 +40,14 @@ repos:
     hooks:
       - id: validate-pyproject
 
-  - repo: https://github.com/kieran-ryan/pyprojectsort
-    rev: "v0.3.0"
-    hooks:
-      - id: pyprojectsort
+  # conflict with the backend dependencies: tomli-w==1.1.0 is incompatible with tomli-w==1.0.0.
+  # - repo: https://github.com/kieran-ryan/pyprojectsort
+  #   rev: "v0.3.0"
+  #   hooks:
+  #     - id: pyprojectsort
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: "0.29.3"
+    rev: "0.29.4"
     hooks:
       - id: check-github-workflows
       - id: check-readthedocs
