Support Python 3.14, and test against PyPy 3.10+
This introduces the following changes:

* tox is configured to test CPython 3.14, PyPy 3.10, and PyPy 3.11.
* GitHub CI is configured to install those same interpreter versions.
* The PyPI trove classifiers are updated.
* The `tests` extra is updated to resolve Python 3.14 failures
  caused by old pytest code that used now-removed `ast` symbols.
  (The coverage version is updated as well.)

--- a/tox.ini
+++ b/tox.ini
@@ -17,14 +17,17 @@ python =
     3.11: py311, docs
     3.12: py312
     3.13: py313
-    pypy3.9: pypy3
+    3.14: py314
+    pypy3.9: pypy39
+    pypy3.10: pypy310
+    pypy3.11: pypy311
 
 
 [tox]
 envlist =
     lint
     typing
-    py{39,310,311,312,313,py3}-{crypto,nocrypto}
+    py{39,310,311,312,313,314,py39,py310,py311}-{crypto,nocrypto}
     docs
     pypi-description
     coverage-report
@@ -75,7 +78,7 @@ commands =
 [testenv:coverage-report]
 basepython = python3.9
 skip_install = true
-deps = coverage[toml]==5.0.4
+deps = coverage[toml]==7.10.7
 commands =
     coverage combine
     coverage report
