--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,16 @@ jobs:
       fail-fast: false
       matrix:
         platform: ["ubuntu-latest", "windows-latest"]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.9"]
+        python-version:
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
+          - "3.14"
+          - "pypy3.9"
+          - "pypy3.10"
+          - "pypy3.11"
 
     steps:
       - uses: "actions/checkout@v5"
