--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools",
+    "setuptools>=77.0.3",
 ]
 
 [project]
@@ -11,7 +11,6 @@ authors = [
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -35,11 +34,9 @@ keywords = [
     "token",
     "web",
 ]
+license = "MIT"
 name = "PyJWT"
 requires-python = ">=3.9"
-
-[project.license]
-text = "MIT"
 
 [project.optional-dependencies]
 crypto = [
