Support Python 3.14, and test against PyPy 3.10+ (#1104)
This introduces the following changes:

* tox is configured to test CPython 3.14, PyPy 3.10, and PyPy 3.11.
* GitHub CI is configured to install those same interpreter versions.
* The PyPI trove classifiers are updated.
* The `tests` extra is updated to resolve Python 3.14 failures
  caused by old pytest code that used now-removed `ast` symbols.
  (The coverage version is updated as well.)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Utilities",
 ]
 description = "JSON Web Token implementation in Python"
@@ -57,8 +58,8 @@ docs = [
     "zope.interface",
 ]
 tests = [
-    "coverage[toml]==5.0.4",
-    "pytest>=6.0.0,<7.0.0",
+    "coverage[toml]==7.10.7",
+    "pytest>=8.4.2,<9.0.0",
 ]
 
 [project.readme]
