--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,11 +81,11 @@ jobs:
         with:
           python-version: "3.9"
 
-      - name: "Install pep517 and twine"
-        run: "python -m pip install pep517 twine"
+      - name: "Install build and twine"
+        run: "python -m pip install build twine"
 
       - name: "Build package"
-        run: "python -m pep517.build --source --binary ."
+        run: "python -m build"
 
       - name: "List result"
         run: "ls -l dist"
