Fix Read the Docs builds
This fixes two warnings that were causing Read the Docs builds to fail:

```
WARNING: missing attribute mentioned in :members: option: module jwt.algorithms, attribute AllowedPrivateKeys [autodoc]
WARNING: missing attribute mentioned in :members: option: module jwt.algorithms, attribute AllowedPublicKeys [autodoc]
```

The warnings occurred because the `crypto` extra
was not configured to be installed in the Read the Docs config file.

The problem was overlooked because the tox `docs` environment
installed the `crypto` extra.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,6 +13,7 @@ python:
       path: "."
       extra_requirements:
         - "docs"
+        - "crypto"
 
 sphinx:
   configuration: "docs/conf.py"
