Thoroughly test type annotations, and resolve errors
Type checking across all supported Pythons revealed errors:

* Python 3.9 doesn't have `typing.TypeAlias`.

  This is fixed by importing `typing_extensions.TypeAlias`.

* Python 3.9 doesn't support type alias `x | y` union syntax.

  This is fixed by using `Union[x, y]` syntax.

* Setting `warn-return-any = true` revealed that
  when `cryptography` isn't installed,
  `RSAPrivateKey.sign()` has an unknown signature.
  The return type cannot be `cast()`
  because it's redundant if `cryptography` is installed.

  This is fixed by adding `signature: bytes = key.sign()`
  and then returning `signature`.

* All disabled error codes have been removed.
* The pre-commit hook for mypy has been removed.
  It's less robust than running the test suite.
* All functions and methods are now fully type-annotated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,20 +96,10 @@ combine_as_imports = true
 profile = "black"
 
 [tool.mypy]
-allow_incomplete_defs = true
-allow_untyped_defs = true
-disable_error_code = [
-    "method-assign",
-    "unused-ignore",
-]
+packages = "jwt"
 ignore_missing_imports = true
-no_implicit_optional = true
-overrides = [
-    { disallow_untyped_calls = false, module = "tests.*" },
-]
-python_version = 3.11
 strict = true
-warn_return_any = false
+warn_return_any = true
 warn_unused_ignores = true
 
 [tool.setuptools]
