--- a/tox.ini
+++ b/tox.ini
@@ -27,10 +27,13 @@ envlist =
     lint
     typing
     py{39,310,311,312,313,314,py39,py310,py311}-{crypto,nocrypto}
+    py{39,310,311,312,313,314}{,-crypto}-mypy
     docs
     pypi-description
     coverage-report
 isolated_build = True
+labels =
+    mypy = py{39,310,311,312,313,314}{,-crypto}-mypy
 
 
 [testenv]
@@ -59,6 +62,16 @@ commands =
     sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
     python -m doctest README.rst docs/usage.rst
 
+
+[testenv:py{39,310,311,312,313,314}{,-crypto}-mypy]
+extras =
+    crypto: crypto
+deps =
+    mypy
+set_env =
+    MYPY_FORCE_COLOR=1
+commands =
+    mypy
 
 [testenv:lint]
 basepython = python3.9
