Build a shared wheel once in the test suite
This cuts the setup times for tox environments roughly in half,
and reduces `tox p` invocations from ~18s to ~14s.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,10 @@ isolated_build = True
 
 
 [testenv]
+# Build a shared wheel once, rather than building a .tar.gz file
+# and forcing each individual tox environment to convert it to a wheel.
+package = wheel
+wheel_build_env = build_wheel
 # Prevent random setuptools/pip breakages like
 # https://github.com/pypa/setuptools/issues/1042 from breaking our builds.
 setenv =
