chore(tests): enable mypy (#1138)
* chore(tests): enable mypy

Add suppressions for all current errors; these will be fixed in
subsequent commits.

* chore(tests): enable `no-untyped-{def,call}`

* chore(tests): enable `unused-ignore`

* chore(tests): enable `arg-type`

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,10 @@ source = [
 ]
 
 [tool.mypy]
-packages = "jwt"
+files = [
+    "jwt",
+    "tests",
+]
 strict = true
 warn_return_any = true
 warn_unused_ignores = true
